# libzoneminder-plugin-openalpr

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac
data/: CMakeLists.txt  Makefile.am  config.php  en_gb.php  fr_fr.php  openalpr.conf
distros/debian/: changelog  control  copyright  rules
distros/debian/patches/: series
distros/debian/source/: options
distros/debian_cmake/: changelog  control  rules
misc/: LprRefVideo01.txt  stream.sh
src/: CMakeLists.txt  Makefile.am  openalpr_plugin.cpp  openalpr_plugin.h
